# user/docs/swagger.json
@@ -29,12 +29,12 @@
                 "summary": "用户注册",
                 "parameters": [
                     {
-                        "description": "Mobile",
-                        "name": "mobile",
+                        "description": "用户注册请求",
+                        "name": "command",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/command.EmailRegisterCommand"
                         }
                     }
                 ],
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "注册成功",
                         "schema": {
-                            "type": "bool"
+                            "$ref": "#/definitions/dto.AuthenticationDTO"
                         }
                     },
                     "409": {
@@ -87,7 +87,7 @@
                     "200": {
                         "description": "登录成功返回认证token",
                         "schema": {
-                            "type": "bool"
+                            "$ref": "#/definitions/dto.AuthenticationDTO"
                         }
                     },
                     "401": {
@@ -137,10 +137,32 @@
         }
     },
     "definitions": {
+        "command.EmailRegisterCommand": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "verificationCode": {
+                    "type": "string"
+                }
+            }
+        },
         "command.SendSmsVerificationCodeCommand": {
             "type": "object",
             "properties": {
                 "mobile": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.AuthenticationDTO": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
